// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiteAllAction renders with disabled 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={true}
    onClick={[Function]}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Only up to 1000 results can be exported."
      >
        <ForwardRef(InternalButton)
          disabled={true}
          loading={false}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      key="application/x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
    <MenuItem
      key="text/vnd+inspire.html+html"
    >
      CV (html)
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`CiteAllAction renders with less than max citeable records results 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    onClick={[Function]}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)
          disabled={false}
          loading={false}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      key="application/x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
    <MenuItem
      key="text/vnd+inspire.html+html"
    >
      CV (html)
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`CiteAllAction renders with loading 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    onClick={[Function]}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)
          disabled={false}
          loading={true}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      key="application/x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="application/vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
    <MenuItem
      key="text/vnd+inspire.html+html"
    >
      CV (html)
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;
